--- a/JQuery/web20.html
+++ b/JQuery/web20.html
@@ -9,6 +9,7 @@
 <body>
     <select id="contenedor"></select>
     <div id="padre"></div>
+    <div id="contenido"></div>
     <script src="jquery-3.6.0.min.js"></script>
     <script>
         $(document).ready(function(){
