--- a/JQuery/PaginaJQUERY/apuestas.html
+++ b/JQuery/PaginaJQUERY/apuestas.html
@@ -33,10 +33,9 @@
             </div>
           </nav>
     </header>
-    <div id="container"></div>
+    <h1>Soy apuestas</h1>
     <script src="./../jquery-3.6.0.min.js"></script>
     <script>
-
         $(document).ready(function(){
             insertarEquipos();
 
@@ -65,7 +64,6 @@
                 }
             });
         }
-
     </script>
     <script src="./../js/bootstrap.bundle.js"></script>
 </body>
