--- a/JQuery/PaginaJQUERY/Home.html
+++ b/JQuery/PaginaJQUERY/Home.html
@@ -5,8 +5,65 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./../css/bootstrap.min.css"/>
 </head>
 <body>
-    <h1>Soy el equipo</h1>
+    <header id="menu">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">Navbar</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="./Home.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./apuestas.html" id="apuesta">Apuestas</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" id="Equipos">Equipos</a>
+                    <ul class="dropdown-menu" id="listadoDinamico">
+                    
+                    </ul>
+                  </li>
+              </div>
+            </div>
+          </nav>
+    </header>
+    <h1>Soy el Home</h1>
+    <script src="./../jquery-3.6.0.min.js"></script>
+    <script>
+        $(document).ready(function(){
+            insertarEquipos();
+            $("body #listadoDinamico").on("click", "a", function(){
+                $(this).attr("href",window.location.replace("./detalleequipo.html?id=" + $(this).attr("id")));
+            });
+        });
+
+        function insertarEquipos(){
+            var urlInsertar = "https://apichampions.azurewebsites.net/api/Equipos";
+            $.ajax({
+                "url" : urlInsertar,
+                "type" : "GET",
+                success : function(data){
+                    $.each(data, function(index, equipo){
+                        var li = $("<li>");
+                        $("#listadoDinamico").append(li);
+                        var a = $("<a>",{
+                            "href" : "#",
+                            "text" : equipo.nombre,
+                            "id" : equipo.idEquipo,
+                        });
+                        li.append(a);
+                        //console.log($(a).attr("id"));
+                    });
+                }
+            });
+        }
+    </script>
+    <script src="./../js/bootstrap.bundle.js"></script>
 </body>
 </html>
