--- a/JQuery/PaginaJQUERY/equipo.htm
+++ b/JQuery/PaginaJQUERY/equipo.htm
@@ -33,13 +33,11 @@
             </div>
           </nav>
     </header>
-    <div id="container"></div>
+    <h1>soy el equipo</h1>
     <script src="./../jquery-3.6.0.min.js"></script>
     <script>
-
         $(document).ready(function(){
             insertarEquipos();
-
             $("body #listadoDinamico").on("click", "a", function(){
                 $(this).attr("href",window.location.replace("./detalleequipo.html?id=" + $(this).attr("id")));
             });
@@ -65,7 +63,6 @@
                 }
             });
         }
-
     </script>
     <script src="./../js/bootstrap.bundle.js"></script>
 </body>
