--- a/JQuery/PaginaJQUERY/jugador.html
+++ b/JQuery/PaginaJQUERY/jugador.html
@@ -33,11 +33,17 @@
             </div>
           </nav>
     </header>
-    <h1>soy el equipo</h1>
+    <br/>
+    <main class="text-center">
+        <div id="contenedor">
+
+        </div>
+    </main>
     <script src="./../jquery-3.6.0.min.js"></script>
     <script>
         $(document).ready(function(){
             insertarEquipos();
+            cargarJugador();
             $("body #listadoDinamico").on("click", "a", function(){
                 $(this).attr("href",window.location.replace("./detalleequipo.html?id=" + $(this).attr("id")));
             });
@@ -59,6 +65,52 @@
                         });
                         li.append(a);
                         //console.log($(a).attr("id"));
+                    });
+                }
+            });
+        }
+
+        function cargarJugador (){
+            var queryString = window.location.search;
+            var urlParams = new URLSearchParams(queryString);
+            var nombre = urlParams.get("nom");
+            var idEquipo = urlParams.get("id");
+            var urlCargarJugador = "https://apichampions.azurewebsites.net/api/Jugadores/BuscadorJugadores/" + nombre;
+            $.ajax({
+                "url" : urlCargarJugador,
+                "type" : "GET",
+                success : function(data){
+                    var h1 = $("<h1>",{
+                        "text" : data[0].nombre
+                    });
+                    $("#contenedor").append(h1);
+                    var img = $("<img>",{
+                        "src" : data[0].imagen,
+                        "width" : "300px"
+                    });
+                    $("#contenedor").append(img);
+
+                    var h2Pos = $("<h2>",{
+                        "text" : "Posición : " + data[0].posicion
+                    });
+                    $("#contenedor").append(h2Pos);
+
+                    var h2 = $("<h2>",{
+                        "text" : "Fecha de nacimiento : " + data[0].fechaNacimiento
+                    });
+                    $("#contenedor").append(h2);
+
+                    var h2Pais = $("<h2>",{
+                        "text" : "País : " + data[0].pais
+                    });
+                    $("#contenedor").append(h2Pais);
+
+                    var btn = $("<button>",{
+                        "text" : "Volver"
+                    });
+                    $("#contenedor").append(btn);
+                    btn.click(function(){
+                        window.location.href="./equipo.html?id=" + idEquipo;
                     });
                 }
             });
