--- a/JQuery/PaginaJQUERY/Home.html
+++ b/JQuery/PaginaJQUERY/Home.html
@@ -33,7 +33,7 @@
             </div>
           </nav>
     </header>
-    <h1>Soy el Home</h1>
+    <h1><img style="width: 100%;" src="./../imagenes/ImagenDos.jpg"/></h1>
     <script src="./../jquery-3.6.0.min.js"></script>
     <script>
         $(document).ready(function(){
